parametrized pod replicas count and added that to docs

--- a/app/k-ruby-deployment.yaml.j2
+++ b/app/k-ruby-deployment.yaml.j2
@@ -22,7 +22,7 @@ spec:
   selector:
     matchLabels:
       app: {{ app_label }}
-  replicas: 1
+  replicas: {{ app_replicas }}
   template:
     metadata:
       labels:
